# django_hierarchical_files

./: README.md  db.sqlite3  pyproject.toml
file_app/: admin.py  forms.py  models.py  views.py
file_app/migrations/: 0001_initial.py
file_app/templates/: form.html  index.html
tree/: settings.py  urls.py
